--- a/Nwqis/Storyboard/Base.lproj/Main.storyboard
+++ b/Nwqis/Storyboard/Base.lproj/Main.storyboard
@@ -19,13 +19,13 @@
                                 <rect key="frame" x="-8" y="0.0" width="430" height="358.5"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="WhatsApp Image 2019-10-30 at 10.10.13 AM" translatesAutoresizingMaskIntoConstraints="NO" id="Jpv-HF-kVv">
-                                <rect key="frame" x="113.49999999999999" y="88" width="187.00000000000003" height="49.000000000000014"/>
+                                <rect key="frame" x="20" y="88" width="374" height="98"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Jpv-HF-kVv" secondAttribute="height" multiplier="187:49" id="Sai-Ih-KFf"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Find your needs" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="52S-0w-Hj1">
-                                <rect key="frame" x="129" y="153" width="156" height="29"/>
+                                <rect key="frame" x="129" y="202" width="156" height="29"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="21"/>
                                 <color key="textColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -64,7 +64,7 @@
                                     <constraint firstAttribute="height" constant="50" id="Ukt-0N-sXK"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
+                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" secureTextEntry="YES"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                         <real key="value" value="0.0"/>
@@ -228,6 +228,9 @@
                                                         <real key="value" value="2"/>
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="signUp:" destination="kBZ-bW-i6o" eventType="touchUpInside" id="7iI-1c-vve"/>
+                                                </connections>
                                             </button>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Phone" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oy5-pk-Ium" customClass="roundedTF" customModule="Nwqis" customModuleProvider="target">
                                                 <rect key="frame" x="8" y="132" width="398" height="50"/>
@@ -454,13 +457,13 @@
                                 <rect key="frame" x="-8" y="0.0" width="430" height="358.5"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="WhatsApp Image 2019-10-30 at 10.10.13 AM" translatesAutoresizingMaskIntoConstraints="NO" id="tCn-7r-4eH">
-                                <rect key="frame" x="113.49999999999999" y="88" width="187.00000000000003" height="49.000000000000014"/>
+                                <rect key="frame" x="20" y="88" width="374" height="98"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="tCn-7r-4eH" secondAttribute="height" multiplier="187:49" id="CWp-4m-Puh"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Find your needs" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iUr-kG-iMd">
-                                <rect key="frame" x="129" y="153" width="156" height="29"/>
+                                <rect key="frame" x="129" y="202" width="156" height="29"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="21"/>
                                 <color key="textColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -614,7 +617,7 @@
                         <nil key="title"/>
                         <barButtonItem key="leftBarButtonItem" title="Item" image="Group 219" id="gNg-MB-f9y"/>
                         <button key="titleView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Gwr-IA-WSa">
-                            <rect key="frame" x="0.0" y="0.0" width="241" height="49"/>
+                            <rect key="frame" x="94" y="0.0" width="229" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <state key="normal" image="WhatsApp Image 2019-10-30 at 10.10.13 AM-2"/>
                         </button>
