--- a/Nwqis/Storyboard/Base.lproj/Main.storyboard
+++ b/Nwqis/Storyboard/Base.lproj/Main.storyboard
@@ -2832,6 +2832,9 @@ seller</string>
                                                         <real key="value" value="2"/>
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="langBTN:" destination="Muv-xE-h0B" eventType="touchUpInside" id="A4m-kK-D8O"/>
+                                                </connections>
                                             </button>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kQi-Mf-SIm">
                                                 <rect key="frame" x="150" y="68" width="114" height="114"/>
