--- a/Nwqis/Storyboard/Base.lproj/Main.storyboard
+++ b/Nwqis/Storyboard/Base.lproj/Main.storyboard
@@ -290,13 +290,13 @@
                                 <color key="backgroundColor" red="0.93326169250000002" green="0.93337351079999997" blue="0.93322366479999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NWQIS" translatesAutoresizingMaskIntoConstraints="NO" id="tCn-7r-4eH">
-                                <rect key="frame" x="54.5" y="88" width="305" height="80"/>
+                                <rect key="frame" x="-98.5" y="88" width="611" height="160"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="tCn-7r-4eH" secondAttribute="height" multiplier="187:49" id="CWp-4m-Puh"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Find your needs" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iUr-kG-iMd">
-                                <rect key="frame" x="129" y="184" width="156" height="29"/>
+                                <rect key="frame" x="129" y="264" width="156" height="29"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="21"/>
                                 <color key="textColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -750,19 +750,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="Wik-X1-gcb">
-                                <rect key="frame" x="32" y="270.5" width="366" height="235"/>
+                                <rect key="frame" x="32" y="208" width="366" height="360"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="YFI-0x-XKD">
-                                        <rect key="frame" x="0.0" y="0.0" width="366" height="56"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="366" height="112"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="035---Search-Store" translatesAutoresizingMaskIntoConstraints="NO" id="vvg-2P-9ah">
-                                                <rect key="frame" x="0.0" y="0.0" width="54" height="56"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="54" height="112"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="54" id="gSE-0N-mYz"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hnu-F6-OrV">
-                                                <rect key="frame" x="62" y="7.5" width="304" height="41"/>
+                                                <rect key="frame" x="62" y="35.5" width="304" height="41"/>
                                                 <string key="text">Type a name or description
 of thing you want</string>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -772,16 +772,16 @@ of thing you want</string>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="v9g-xv-1N0">
-                                        <rect key="frame" x="0.0" y="88" width="366" height="54"/>
+                                        <rect key="frame" x="0.0" y="144" width="366" height="108"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="location" translatesAutoresizingMaskIntoConstraints="NO" id="P4m-3D-C3h">
-                                                <rect key="frame" x="0.0" y="0.0" width="54" height="54"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="54" height="108"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="54" id="5JI-BG-dyp"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f2j-mO-CcH">
-                                                <rect key="frame" x="62" y="6.5" width="304" height="41"/>
+                                                <rect key="frame" x="62" y="33.5" width="304" height="41"/>
                                                 <string key="text">We will find the nearest place 
 have this thing  </string>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -791,16 +791,16 @@ have this thing  </string>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="u3D-sd-7gY">
-                                        <rect key="frame" x="0.0" y="174" width="366" height="61"/>
+                                        <rect key="frame" x="0.0" y="284" width="366" height="76"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="order" translatesAutoresizingMaskIntoConstraints="NO" id="uvf-TT-vH7">
-                                                <rect key="frame" x="0.0" y="11.5" width="54" height="38"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="54" height="76"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="54" id="cMB-x1-ep1"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dSr-Cq-56G">
-                                                <rect key="frame" x="62" y="0.0" width="304" height="61"/>
+                                                <rect key="frame" x="62" y="7.5" width="304" height="61"/>
                                                 <string key="text">When you find your need you
 will messaging or calling the
 seller</string>
@@ -2354,7 +2354,7 @@ seller</string>
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q56-rf-kC7">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="Q56-rf-kC7">
                                 <rect key="frame" x="0.0" y="358.5" width="414" height="537.5"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U00-mh-yYz">
